Speedometer_proj/build/log/idf_py_stdout_output_21384
[1/12] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\mmich\Desktop\Git_repo_for_speedometer\Bicycle-Speedometer_MM\Speedometer_proj\build\bootloader\esp-idf\esptool_py && C:\Users\mmich\.espressif\python_env\idf5.2_py3.11_env\Scripts\python.exe C:/Users/mmich/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/mmich/Desktop/Git_repo_for_speedometer/Bicycle-Speedometer_MM/Speedometer_proj/build/bootloader/bootloader.bin"
Bootloader binary size 0x6860 bytes. 0x7a0 bytes (7%) free.
[2/10] Building C object esp-idf/adc_sensor/CMakeFiles/__idf_adc_sensor.dir/adc_sensor.c.obj
FAILED: esp-idf/adc_sensor/CMakeFiles/__idf_adc_sensor.dir/adc_sensor.c.obj 
ccache C:\Users\mmich\.espressif\tools\xtensa-esp-elf\esp-13.2.0_20230928\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.2.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/mmich/Desktop/Git_repo_for_speedometer/Bicycle-Speedometer_MM/Speedometer_proj/build/config -IC:/Users/mmich/Desktop/Git_repo_for_speedometer/Bicycle-Speedometer_MM/Speedometer_proj/components/adc_sensor/include -IC:/Users/mmich/esp-idf/components/newlib/platform_include -IC:/Users/mmich/esp-idf/components/freertos/config/include -IC:/Users/mmich/esp-idf/components/freertos/config/include/freertos -IC:/Users/mmich/esp-idf/components/freertos/config/xtensa/include -IC:/Users/mmich/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/mmich/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Users/mmich/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Users/mmich/esp-idf/components/freertos/esp_additions/include -IC:/Users/mmich/esp-idf/components/esp_hw_support/include -IC:/Users/mmich/esp-idf/components/esp_hw_support/include/soc -IC:/Users/mmich/esp-idf/components/esp_hw_support/include/soc/esp32 -IC:/Users/mmich/esp-idf/components/esp_hw_support/port/esp32/. -IC:/Users/mmich/esp-idf/components/heap/include -IC:/Users/mmich/esp-idf/components/log/include -IC:/Users/mmich/esp-idf/components/soc/include -IC:/Users/mmich/esp-idf/components/soc/esp32 -IC:/Users/mmich/esp-idf/components/soc/esp32/include -IC:/Users/mmich/esp-idf/components/hal/platform_port/include -IC:/Users/mmich/esp-idf/components/hal/esp32/include -IC:/Users/mmich/esp-idf/components/hal/include -IC:/Users/mmich/esp-idf/components/esp_rom/include -IC:/Users/mmich/esp-idf/components/esp_rom/include/esp32 -IC:/Users/mmich/esp-idf/components/esp_rom/esp32 -IC:/Users/mmich/esp-idf/components/esp_common/include -IC:/Users/mmich/esp-idf/components/esp_system/include -IC:/Users/mmich/esp-idf/components/esp_system/port/soc -IC:/Users/mmich/esp-idf/components/esp_system/port/include/private -IC:/Users/mmich/esp-idf/components/xtensa/esp32/include -IC:/Users/mmich/esp-idf/components/xtensa/include -IC:/Users/mmich/esp-idf/components/xtensa/deprecated_include -IC:/Users/mmich/esp-idf/components/lwip/include -IC:/Users/mmich/esp-idf/components/lwip/include/apps -IC:/Users/mmich/esp-idf/components/lwip/include/apps/sntp -IC:/Users/mmich/esp-idf/components/lwip/lwip/src/include -IC:/Users/mmich/esp-idf/components/lwip/port/include -IC:/Users/mmich/esp-idf/components/lwip/port/freertos/include -IC:/Users/mmich/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/mmich/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/mmich/esp-idf/components/lwip/port/esp32xx/include/sys -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/mmich/Desktop/Git_repo_for_speedometer/Bicycle-Speedometer_MM/Speedometer_proj=. -fmacro-prefix-map=C:/Users/mmich/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/adc_sensor/CMakeFiles/__idf_adc_sensor.dir/adc_sensor.c.obj -MF esp-idf\adc_sensor\CMakeFiles\__idf_adc_sensor.dir\adc_sensor.c.obj.d -o esp-idf/adc_sensor/CMakeFiles/__idf_adc_sensor.dir/adc_sensor.c.obj -c C:/Users/mmich/Desktop/Git_repo_for_speedometer/Bicycle-Speedometer_MM/Speedometer_proj/components/adc_sensor/adc_sensor.c
In file included from C:/Users/mmich/Desktop/Git_repo_for_speedometer/Bicycle-Speedometer_MM/Speedometer_proj/components/adc_sensor/adc_sensor.c:2:
C:/Users/mmich/Desktop/Git_repo_for_speedometer/Bicycle-Speedometer_MM/Speedometer_proj/components/adc_sensor/include/adc_sensor.h:2:8: error: unknown type name 'bool'
    2 | static bool IRAM_ATTR adc_conversion_done_cb(adc_continuous_handle_t handle, const adc_continuous_evt_data_t *edata, void *user_data);
      |        ^~~~
C:/Users/mmich/Desktop/Git_repo_for_speedometer/Bicycle-Speedometer_MM/Speedometer_proj/components/adc_sensor/include/adc_sensor.h:2:23: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'adc_conversion_done_cb'
    2 | static bool IRAM_ATTR adc_conversion_done_cb(adc_continuous_handle_t handle, const adc_continuous_evt_data_t *edata, void *user_data);
      |                       ^~~~~~~~~~~~~~~~~~~~~~
C:/Users/mmich/Desktop/Git_repo_for_speedometer/Bicycle-Speedometer_MM/Speedometer_proj/components/adc_sensor/include/adc_sensor.h:3:33: error: unknown type name 'adc_continuous_handle_t'
    3 | static void continuous_adc_init(adc_continuous_handle_t *handle);
      |                                 ^~~~~~~~~~~~~~~~~~~~~~~
C:/Users/mmich/Desktop/Git_repo_for_speedometer/Bicycle-Speedometer_MM/Speedometer_proj/components/adc_sensor/adc_sensor.c:8:10: fatal error: nimBLE.h: No such file or directory
    8 | #include "nimBLE.h"
      |          ^~~~~~~~~~
compilation terminated.
[3/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/Speedometer.c.obj
C:/Users/mmich/Desktop/Git_repo_for_speedometer/Bicycle-Speedometer_MM/Speedometer_proj/main/Speedometer.c: In function 'app_main':
C:/Users/mmich/Desktop/Git_repo_for_speedometer/Bicycle-Speedometer_MM/Speedometer_proj/main/Speedometer.c:137:17: warning: passing argument 1 of 'xTaskCreate' from incompatible pointer type [-Wincompatible-pointer-types]
  137 |     xTaskCreate(sensor_func,"sensor_func", 2048, NULL, 5, NULL);
      |                 ^~~~~~~~~~~
      |                 |
      |                 void (*)(void)
In file included from C:/Users/mmich/esp-idf/components/freertos/esp_additions/include/freertos/idf_additions.h:20,
                 from C:/Users/mmich/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:1533,
                 from C:/Users/mmich/Desktop/Git_repo_for_speedometer/Bicycle-Speedometer_MM/Speedometer_proj/main/Speedometer.c:3:
C:/Users/mmich/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/task.h:371:44: note: expected 'TaskFunction_t' {aka 'void (*)(void *)'} but argument is of type 'void (*)(void)'
  371 |     BaseType_t xTaskCreate( TaskFunction_t pxTaskCode,
      |                             ~~~~~~~~~~~~~~~^~~~~~~~~~
In file included from C:/Users/mmich/Desktop/Git_repo_for_speedometer/Bicycle-Speedometer_MM/Speedometer_proj/main/Speedometer.c:15:
C:/Users/mmich/Desktop/Git_repo_for_speedometer/Bicycle-Speedometer_MM/Speedometer_proj/components/adc_sensor/include/adc_sensor.h: At top level:
C:/Users/mmich/Desktop/Git_repo_for_speedometer/Bicycle-Speedometer_MM/Speedometer_proj/components/adc_sensor/include/adc_sensor.h:1:13: warning: 'threshold_task' declared 'static' but never defined [-Wunused-function]
    1 | static void threshold_task(void *arg);
      |             ^~~~~~~~~~~~~~
C:/Users/mmich/Desktop/Git_repo_for_speedometer/Bicycle-Speedometer_MM/Speedometer_proj/components/adc_sensor/include/adc_sensor.h:2:23: warning: 'adc_conversion_done_cb' declared 'static' but never defined [-Wunused-function]
    2 | static bool IRAM_ATTR adc_conversion_done_cb(adc_continuous_handle_t handle, const adc_continuous_evt_data_t *edata, void *user_data);
      |                       ^~~~~~~~~~~~~~~~~~~~~~
C:/Users/mmich/Desktop/Git_repo_for_speedometer/Bicycle-Speedometer_MM/Speedometer_proj/components/adc_sensor/include/adc_sensor.h:3:13: warning: 'continuous_adc_init' declared 'static' but never defined [-Wunused-function]
    3 | static void continuous_adc_init(adc_continuous_handle_t *handle);
      |             ^~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
